# grelha_3d_detection

./: README.md
yolo2mark/: CMakeLists.txt  package.xml  rviz.rviz
yolo2mark/launch/: CMakeLists.txt  package.xml  pc.launch  pc_seg.launch  perception_node.launch
yolo2mark/scripts/: detect_and_draw_joints.py  lib_draw_3d_joints.py  lib_rgbd.py  lib_ros_rgbd_pub_and_sub.py  o3d_bridge.py  pc.py  seg.py  yolo2mark.py  yolo_subscriber copy.py  yolo_subscriber.py
yolo2mark/src/: perception_node.cpp
